login画面デザイン

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,6 +17,7 @@
             <li><a>スコア比較</a></li>
             <li><a>CSV管理</a></li>
             <li>Coming Soon</li>
+            <li><%= link_to 'ログアウト', logout_path %></li>
           </ul>
         </nav>
       </header>
