--- a/app/assets/stylesheets/nav.scss
+++ b/app/assets/stylesheets/nav.scss
@@ -9,7 +9,7 @@ header {
         padding: 16px;
         font-size: 1.0rem;
       }
-      li:hover {
+      li:hover a {
         text-shadow: 0 0 20px rgba(255, 255, 0, 1);
         color: #BF7900;
       }
