--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,10 +12,10 @@
       <header>
         <nav>
           <ul>
-            <li><a>トップ</a></li>
+            <li><%= link_to 'トップ', top_path %></li>
             <li><a>最新スコア表示</a></li>
             <li><a>スコア比較</a></li>
-            <li><a>CSV管理</a></li>
+            <li><%= link_to 'CSV管理', csv_path %></li>
             <li>Coming Soon</li>
             <li><%= link_to 'ログアウト', logout_path %></li>
           </ul>
