[WIP]最新スコア実装

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -1,6 +1,8 @@
 @import "reset";
+@import "foundation";
 @import "index";
 @import "nav";
 @import "login";
 @import "csv_upload";
 @import "csv";
+@import "recent";
