--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
         <nav>
           <ul>
             <li><%= link_to 'トップ', top_path %></li>
-            <li><a>最新スコア表示</a></li>
+            <li><%= link_to '最新スコア', recent_path %></li>
             <li><a>スコア比較</a></li>
             <li><%= link_to 'CSV管理', csv_path %></li>
             <li>Coming Soon</li>
