--- a/app/views/component/_version_box.html.erb
+++ b/app/views/component/_version_box.html.erb
@@ -1,8 +1,8 @@
-<div class="">
-  <%= label_tag version, version_name %>
+<div class="version-search-item">
   <% if params[version] %>
       <%= check_box_tag version, version_name, true %>
   <% else %>
       <%= check_box_tag version, version_name %>
   <% end %>
+  <%= label_tag version, version_name %>
 </div>
