--- a/app/assets/stylesheets/_foundation.scss
+++ b/app/assets/stylesheets/_foundation.scss
@@ -7,15 +7,30 @@ body{
   max-width: 1280px;
   margin: 0 auto;
 }
-.blue{
+.c-n{
   color: #4E9BFF;
 }
-.yellow{
+.c-h{
   color: #FFCE00;
 }
 
-.red{
+.c-a{
   color: #FF2F2F;
+}
+.c-ac{
+  color: rebeccapurple;
+}
+.c-ec{
+  color: green;
+}
+.c-nc{
+  color: blue;
+}
+.c-hc{
+  color: red;
+}
+.c-ehc{
+  color: yellow;
 }
 
 a{
