--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -4,9 +4,9 @@
       <% @new_record.each_with_index do |record, i| %>
           <div class="level-wrap">
             <h3 class="humen-title">
-              <% if i == 0 %><span class="blue">Normal譜面</span><% end %>
-              <% if i == 1 %><span class="yellow">Hyper譜面</span><% end %>
-              <% if i == 2 %><span class="red">Another譜面</span><% end %>
+              <% if i == 0 %><span class="c-n">Normal譜面</span><% end %>
+              <% if i == 1 %><span class="c-h">Hyper譜面</span><% end %>
+              <% if i == 2 %><span class="c-a">Another譜面</span><% end %>
             </h3>
             <div class="records-wrap">
               <% if record.length != 0 %>
