--- a/app/views/score/index.html.erb
+++ b/app/views/score/index.html.erb
@@ -6,15 +6,16 @@
   <% if @data %>
       <div class="record-head record-wrap">
         <div class="record-title">
-          <div class="version" id="version-header">
+          <div class="version element" id="version-header">
             <p>バージョン</p>
-            <p class="sort-icon sort-icon-up"></p>
             <%= render partial: 'component/version_boxes' %>
+            <p class="sort-icon sort-icon-up"></p>
           </div>
-          <div class="title" id="title-header">
+          <div class="title element" id="title-header">
             <p>タイトル</p>
+            <p class="sort-icon sort-icon-up"></p>
           </div>
-          <p class="num">プレー回数</p>
+          <p class="num element">プレー回数</p>
         </div>
         <div class="record-by-level-wrap">
           <div class="record-by-level">
@@ -35,35 +36,35 @@
                data-version="<%=record['﻿バージョン'] %>"
                data-version-num="<%=version_num record['﻿バージョン'] %>"
           >
-            <div class="record-title">
+            <div class="record-title record-title-content">
               <p class="version"><%= record['﻿バージョン'] %></p>
               <p class="title"><%= record['タイトル'] %></p>
               <p class="num"><%= record['プレー回数'] %></p>
             </div>
             <div class="record-by-level-wrap">
               <div class="record-by-level">
-                <p class="element">N(<%= record['NORMAL 難易度'] %>)</p>
+                <p class="element"><span class="c-n">N</span>  (<%= record['NORMAL 難易度'] %>)</p>
                 <p class="element"><%= record['NORMAL EXスコア'] %></p>
                 <p class="element"><%= record['NORMAL ミスカウント'] %></p>
-                <p class="element"><%= record['NORMAL クリアタイプ'] %></p>
+                <p class="element"><%=(create_clear_type record['NORMAL クリアタイプ']).html_safe  %></p>
                 <p class="element"><%= record['NORMAL DJ LEVEL'] %></p>
               </div>
               <div class="record-by-level">
-                <p class="element">H(<%= record['HYPER 難易度'] %>)</p>
+                <p class="element"><span class="c-h">H</span>  (<%= record['HYPER 難易度'] %>)</p>
                 <p class="element"><%= record['HYPER EXスコア'] %></p>
                 <p class="element"><%= record['HYPER ミスカウント'] %></p>
-                <p class="element"><%= record['HYPER クリアタイプ'] %></p>
+                <p class="element"><%=(create_clear_type record['HYPER クリアタイプ']).html_safe  %></p>
                 <p class="element"><%= record['HYPER DJ LEVEL'] %></p>
               </div>
               <div class="record-by-level">
-                <p class="element">A(<%= record['ANOTHER 難易度'] %>)</p>
+                <p class="element"><span class="c-a">A</span>  (<%= record['ANOTHER 難易度'] %>)</p>
                 <p class="element"><%= record['ANOTHER EXスコア'] %></p>
                 <p class="element"><%= record['ANOTHER ミスカウント'] %></p>
-                <p class="element"><%= record['ANOTHER クリアタイプ'] %></p>
+                <p class="element"><%=(create_clear_type record['ANOTHER クリアタイプ']).html_safe  %></p>
                 <p class="element"><%= record['ANOTHER DJ LEVEL'] %></p>
               </div>
             </div>
-            <div class="record-time">
+            <div class="record-time record-time-content">
               <p class="element"><%= record['最終プレー日時'] %></p>
             </div>
           </div>
