--- a/app/views/score/index.html.erb
+++ b/app/views/score/index.html.erb
@@ -20,7 +20,12 @@
                 <p class="sort-icon sort-icon-up"></p>
               </div>
             </div>
-            <p class="num element">プレー回数</p>
+            <div class="num element">
+              <p>プレー回数</p>
+              <div class="click-area" id="num-header">
+                <p class="sort-icon sort-icon-up"></p>
+              </div>
+            </div>
           </div>
           <div class="record-by-level-wrap">
             <div class="record-by-level">
