パーシャル化変更

--- a/app/views/component/_version_box.html.erb
+++ b/app/views/component/_version_box.html.erb
@@ -1,8 +1,113 @@
-<div class="version-search-item">
-  <% if params[version] %>
-      <%= check_box_tag version, version_name, true %>
-  <% else %>
-      <%= check_box_tag version, version_name %>
-  <% end %>
-  <%= label_tag version, version_name %>
+<div class="version-search">
+  <div class="version-search-item">
+    <%= check_box_tag 'v', 'ALL', true %>
+    <%= label_tag 'v', 'ALL' %>
+  </div>
+  <div class="version-search-item">
+    <%= check_box_tag 'v24', 'SINOBUZ', true %>
+    <%= label_tag 'v24', 'SINOBUZ' %>
+  </div>
+  <div class="version-search-item">
+    <%= check_box_tag 'v23', 'copula', true %>
+    <%= label_tag 'v23', 'copula' %>
+  </div>
+  <div class="version-search-item">
+    <%= check_box_tag 'v22', 'PENDUAL', true %>
+    <%= label_tag 'v22', 'PENDUAL' %>
+  </div>
+  <div class="version-search-item">
+    <%= check_box_tag 'v21', 'SPADA', true %>
+    <%= label_tag 'v21', 'SPADA' %>
+  </div>
+  <div class="version-search-item">
+    <%= check_box_tag 'v20', 'tricoro', true %>
+    <%= label_tag 'v20', 'tricoro' %>
+  </div>
+  <div class="version-search-item">
+    <%= check_box_tag 'v19', 'Lincle', true %>
+    <%= label_tag 'v19', 'Lincle' %>
+  </div>
+  <div class="version-search-item">
+    <%= check_box_tag 'v18', 'Resort Anthem', true %>
+    <%= label_tag 'v18', 'Resort Anthem' %>
+  </div>
+  <div class="version-search-item">
+    <%= check_box_tag 'v17', 'SIRIUS', true %>
+    <%= label_tag 'v17', 'SIRIUS' %>
+  </div>
+  <div class="version-search-item">
+    <%= check_box_tag 'v16', 'EMPRESS', true %>
+    <%= label_tag 'v16', 'EMPRESS' %>
+  </div>
+  <div class="version-search-item">
+    <%= check_box_tag 'v15', 'DJ TROOPERS', true %>
+    <%= label_tag 'v15', 'DJ TROOPERS' %>
+  </div>
+  <div class="version-search-item">
+    <%= check_box_tag 'v14', 'GOLD', true %>
+    <%= label_tag 'v14', 'GOLD' %>
+  </div>
+  <div class="version-search-item">
+    <%= check_box_tag 'v13', 'DistorteD', true %>
+    <%= label_tag 'v13', 'DistorteD' %>
+  </div>
+  <div class="version-search-item">
+    <%= check_box_tag 'v12', 'HAPPY SKY', true %>
+    <%= label_tag 'v12', 'HAPPY SKY' %>
+  </div>
+
+  <div class="version-search-item">
+    <%= check_box_tag 'v11', 'IIDX RED', true %>
+    <%= label_tag 'v11', 'IIDX RED' %>
+  </div>
+
+  <div class="version-search-item">
+    <%= check_box_tag 'v10', '10th style', true %>
+    <%= label_tag 'v10', '10th style' %>
+  </div>
+
+  <div class="version-search-item">
+    <%= check_box_tag 'v9', '9th style', true %>
+    <%= label_tag 'v9', '9th style' %>
+  </div>
+
+  <div class="version-search-item">
+    <%= check_box_tag 'v8', '8th style', true %>
+    <%= label_tag 'v8', '8th style' %>
+  </div>
+
+  <div class="version-search-item">
+    <%= check_box_tag 'v7', '7th style', true %>
+    <%= label_tag 'v7', '7th style' %>
+  </div>
+
+  <div class="version-search-item">
+    <%= check_box_tag 'v6', '6th style', true %>
+    <%= label_tag 'v6', '6th style' %>
+  </div>
+
+  <div class="version-search-item">
+    <%= check_box_tag 'v5', '5th style', true %>
+    <%= label_tag 'v5', '5th style' %>
+  </div>
+
+  <div class="version-search-item">
+    <%= check_box_tag 'v4', '4th style', true %>
+    <%= label_tag 'v4', '4th style' %>
+  </div>
+
+  <div class="version-search-item">
+    <%= check_box_tag 'v3', '3rd style', true %>
+    <%= label_tag 'v3', '3rd style' %>
+  </div>
+
+  <div class="version-search-item">
+    <%= check_box_tag 'v2', '2nd style', true %>
+    <%= label_tag 'v2', '2nd style' %>
+  </div>
+
+  <div class="version-search-item">
+    <%= check_box_tag 'v1', '1st&substream', true %>
+    <%= label_tag 'v1', '1st&substream' %>
+  </div>
 </div>
