--- a/app/assets/stylesheets/_recent.scss
+++ b/app/assets/stylesheets/_recent.scss
@@ -10,10 +10,10 @@
     .element{
       padding: 2px 0;
     }
-    .record-by-level-wrap {
+    .record-second-elm-wrap {
       display: flex;
       flex-flow: column nowrap;
-      .record-by-level {
+      .record-second-elm {
         display: flex;
         flex-flow: row nowrap;
         justify-content: space-between;
@@ -22,34 +22,47 @@
         }
       }
       width: 50%;
+
+      .level:hover .level-search {
+        display: flex;
+      }
+      .level-search {
+        color: #2E2F30;
+        position: absolute;
+        top: 20px;
+        width: 320px;
+        height: 330px;
+        padding: 16px;
+        margin-top: 16px;
+        border-radius: 4%;
+        background-color: rgba(255, 255, 255, 0.9);
+        z-index: 2;
+        display: none;
+        flex-flow: column wrap;
+        justify-content: space-between;
+        .level-search-item{
+          height: 25px;
+          width: 160px;
+          text-align: left;
+        }
+      }
+
     }
-    .record-title {
+    .record-first-elm {
       display: flex;
       flex-flow: row nowrap;
       justify-content: space-between;
-      .click-area{
-        width: 100%;
-        height: 36px;
-        position: absolute;
-        top: 0;
-      }
       .version {
         width: 26%;
-        position: relative;
       }
       .title {
         width: 56%;
-        position: relative;
       }
       .num {
         width: 20%;
-        position: relative;
       }
       width: 42%;
       align-items: center;
-      .element{
-        padding: 12px 0;
-      }
     }
     .record-time {
       width: 8%;
@@ -65,6 +78,7 @@
     .version-search {
       color: #2E2F30;
       position: absolute;
+      top: 20px;
       width: 320px;
       height: 330px;
       padding: 16px;
@@ -81,24 +95,6 @@
         text-align: left;
       }
     }
-
-    .title:hover .title-search{
-      display: block;
-    }
-    .title-search{
-      color: #2E2F30;
-      position: absolute;
-      width: 300px;
-      height: 300px;
-      background-color: rgba(255,255,255,0.9);
-      z-index: 2;
-      display: none;
-      form{
-        height: 300px;
-        display: flex;
-        flex-flow: column wrap;
-      }
-    }
   }
   .record-head {
     font-size: 0.8rem;
@@ -106,10 +102,18 @@
     border-top-left-radius: 16px;
     width: 1262px;
     background-color: #101614;
+    .click-area{
+      width: 100%;
+      height: 36px;
+      position: absolute;
+      top: 0;
+    }
     .element{
       cursor: pointer;
+      padding: 12px 0;
+      position: relative;
     }
-    .title, .num{
+    .title, .num, .level{
       .sort-icon{
         display: none;
       }
