--- a/app/views/csv_manage/index.html.erb
+++ b/app/views/csv_manage/index.html.erb
@@ -7,6 +7,7 @@
       <%= form_tag delete_path do %>
           <span class="name"><%=name %></span>
           <%= hidden_field_tag :file, name %>
+            <!--TODO alert-->
           <%= submit_tag '削除', class: :delete %>
       <% end %>
     <% end %>
