[FIX]検索機能実装

--- a/app/views/score/index.html.erb
+++ b/app/views/score/index.html.erb
@@ -62,7 +62,7 @@
                data-a-level="<%= record['ANOTHER 難易度'] %>"
                data-enable="true"
                data-title="<%= record['タイトル'] %>"
-               data-searched="false"
+               data-searched="true"
           >
             <div class="record-first-elm">
               <p class="version"><%= record['﻿バージョン'] %></p>
