--- a/app/views/score/index.html.erb
+++ b/app/views/score/index.html.erb
@@ -41,7 +41,13 @@
                 </div>
                 <%= render partial: 'component/level_box' %>
               </div>
-              <p class="element">スコア</p>
+              <div class="score element">
+                <p>スコア</p>
+                <div class="click-area" id="score-header">
+                  <p class="sort-icon sort-icon-up"></p>
+                </div>
+                <%= render partial: 'component/select_level_box', locals: {type: 'score'}%>
+              </div>
               <p class="element">ミスカウント</p>
               <p class="element">クリアタイプ</p>
               <p class="element">DJ LEVEL</p>
@@ -72,21 +78,21 @@
             <div class="record-second-elm-wrap">
               <div class="record-second-elm">
                 <p class="element"><span class="c-n">N</span>  (<%= record['NORMAL 難易度'] %>)</p>
-                <p class="element"><%= record['NORMAL EXスコア'] %></p>
+                <p class="element n-score"><%= record['NORMAL EXスコア'] %></p>
                 <p class="element"><%= record['NORMAL ミスカウント'] %></p>
                 <p class="element"><%=(create_clear_type record['NORMAL クリアタイプ']).html_safe  %></p>
                 <p class="element"><%= record['NORMAL DJ LEVEL'] %></p>
               </div>
               <div class="record-second-elm">
                 <p class="element"><span class="c-h">H</span>  (<%= record['HYPER 難易度'] %>)</p>
-                <p class="element"><%= record['HYPER EXスコア'] %></p>
+                <p class="element h-score"><%= record['HYPER EXスコア'] %></p>
                 <p class="element"><%= record['HYPER ミスカウント'] %></p>
                 <p class="element"><%=(create_clear_type record['HYPER クリアタイプ']).html_safe  %></p>
                 <p class="element"><%= record['HYPER DJ LEVEL'] %></p>
               </div>
               <div class="record-second-elm">
                 <p class="element level"><span class="c-a">A</span>  (<%= record['ANOTHER 難易度'] %>)</p>
-                <p class="element"><%= record['ANOTHER EXスコア'] %></p>
+                <p class="element a-score"><%= record['ANOTHER EXスコア'] %></p>
                 <p class="element"><%= record['ANOTHER ミスカウント'] %></p>
                 <p class="element"><%=(create_clear_type record['ANOTHER クリアタイプ']).html_safe  %></p>
                 <p class="element"><%= record['ANOTHER DJ LEVEL'] %></p>
