--- a/app/assets/stylesheets/_recent.scss
+++ b/app/assets/stylesheets/_recent.scss
@@ -140,7 +140,7 @@
     //.element:hover{
     //  background-color: red;
     //}
-    .title, .num, .level, .score, .miss, .clear, .dj{
+    .title, .num, .level, .score, .miss, .clear, .dj, .record-time{
       .sort-icon{
         display: none;
       }
