[UPDATE]スコア一覧デザイン

--- a/app/assets/stylesheets/_foundation.scss
+++ b/app/assets/stylesheets/_foundation.scss
@@ -18,19 +18,22 @@ body{
   color: #FF2F2F;
 }
 .c-ac{
-  color: rebeccapurple;
+  color: rgb(183, 143, 255);
+}
+.c-fa{
+  color: rgb(202, 99, 64);
 }
 .c-ec{
-  color: green;
+  color: rgb(141, 208, 77);
 }
 .c-nc{
-  color: blue;
+  color: rgb(58, 232, 255);
 }
 .c-hc{
-  color: red;
+  color: rgb(253, 47, 47);
 }
 .c-ehc{
-  color: yellow;
+  color: rgb(254, 225, 82);
 }
 
 a{
