--- a/app/views/component/_level_box.html.erb
+++ b/app/views/component/_level_box.html.erb
@@ -15,7 +15,7 @@
   <% end %>
 
   <div>
-    <p>ソート時に使用する<br />難易度</p>
+    <p class="select-level-box-title">ソート時に使用する<br />難易度</p>
     <div class="level-radio-item">
       <%= radio_button_tag 'sort_level', 'n', true %>
       <%= label_tag 'sort_level_n', 'NORMAL' %>
