--- a/app/views/component/_select_level_box.html.erb
+++ b/app/views/component/_select_level_box.html.erb
@@ -1,5 +1,5 @@
 <div class="select-level-box">
-  <p>ソート時に使用する<br />難易度</p>
+  <p class="select-level-box-title">ソート時に使用する<br />難易度</p>
   <div class="level-radio-item">
     <%= radio_button_tag "#{type}_sort_level", 'n', true %>
     <%= label_tag "#{type}_sort_level_n", 'NORMAL' %>
